# teledap

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  test_mcp_e2e.ps1  test_mcp_e2e.sh
.claude/skills/git-commit/: SKILL.md
.github/workflows/: ci.yml
crates/dap-client/: Cargo.toml
crates/dap-client/src/: client.rs  error.rs  lib.rs
crates/dap-client/tests/: integration_test.rs
crates/dap-codec/: Cargo.toml
crates/dap-codec/src/: lib.rs
crates/dap-trace/: Cargo.toml
crates/dap-trace/src/: entry.rs  handle.rs  lib.rs  logger.rs
crates/dap-types/: Cargo.toml
crates/dap-types/src/: base.rs  capabilities.rs  enums.rs  events.rs  lib.rs  requests.rs  reverse_requests.rs  types.rs
crates/debug-bridge/: Cargo.toml
crates/debug-bridge/src/: error.rs  lib.rs  registry.rs  tools.rs
crates/debug-bridge/src/handlers/: breakpoint.rs  execution.rs  inspect.rs  lifecycle.rs  mod.rs  openocd.rs
crates/debug-bridge/tests/: mcp_integration_test.rs
crates/debug-session/: Cargo.toml
crates/debug-session/src/: breakpoints.rs  cache.rs  context.rs  error.rs  gating.rs  lib.rs  mapping.rs  session.rs  state.rs  variables.rs
crates/debug-session/tests/: integration_test.rs
crates/mcp-protocol/: Cargo.toml
crates/mcp-protocol/src/: error.rs  lib.rs  transport.rs  types.rs
crates/openocd-client/: Cargo.toml
crates/openocd-client/src/: client.rs  error.rs  lib.rs
docs/: MCP-DAP协议桥接架构.md  MCP-Inspector手动测试指南.md  Specification.html  fangan.md  测试报告.md  测试方案.md
docs/Specification_files/: js  js(1)
src/: cli.rs  error.rs  main.rs  server.rs
src/audit_tracker/: logger.rs  mod.rs  model.rs
src/drivers/: mod.rs  openocd_tcl.rs
src/drivers/lldb_dap/: driver.rs  frame_decoder.rs  mod.rs
src/mcp_interface/: mod.rs  protocol_types.rs  server.rs
src/session_coordinator/: coordinator.rs  mod.rs  state_machine.rs
