[package]
name = "teledap"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "MCP Server bridging AI assistants to embedded hardware debugging tools (CodeLLDB + OpenOCD)"

[dependencies]
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dap-types.workspace = true
dap-codec.workspace = true
dap-client.workspace = true
dap-trace.workspace = true
debug-session.workspace = true
mcp-protocol.workspace = true
debug-bridge.workspace = true
openocd-client.workspace = true

[workspace]
resolver = "2"
members = [
    ".",
    "crates/dap-types",
    "crates/dap-codec",
    "crates/dap-client",
    "crates/dap-trace",
    "crates/debug-session",
    "crates/mcp-protocol",
    "crates/debug-bridge",
    "crates/openocd-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["JinHaoLee"]

[workspace.dependencies]
# --- Async Runtime ---
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Internal ---
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"

# --- CLI ---
clap = { version = "4", features = ["derive"] }

# --- Time ---
chrono = { version = "0.4", features = ["serde"] }

# --- Utils ---
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"

# --- Local crates ---
dap-types = { path = "crates/dap-types" }
dap-codec = { path = "crates/dap-codec" }
dap-client = { path = "crates/dap-client" }
dap-trace = { path = "crates/dap-trace" }
debug-session = { path = "crates/debug-session" }
mcp-protocol = { path = "crates/mcp-protocol" }
debug-bridge = { path = "crates/debug-bridge" }
openocd-client = { path = "crates/openocd-client" }
