[package]
name = "dap-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "DAP client for managing codelldb process and DAP communication"

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
futures = "0.3"
dap-types.workspace = true
dap-codec.workspace = true
