[package]
name = "dap-codec"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tokio codec for DAP Content-Length framed protocol"

[dependencies]
tokio-util.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
dap-types.workspace = true
