[package]
name = "dap-trace"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Non-blocking debug session trace recorder with ring buffer and JSONL output"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
parking_lot.workspace = true
uuid.workspace = true
tracing.workspace = true
