[package]
name = "debug-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "MCP tool handlers bridging AI tool calls to DebugSession operations"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
dap-types.workspace = true
dap-trace.workspace = true
debug-session.workspace = true
mcp-protocol.workspace = true

[dev-dependencies]
tokio.workspace = true
dap-client.workspace = true
