[package]
name = "mcp-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "MCP (Model Context Protocol) JSON-RPC 2.0 types and transport for TeleDAP"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
